--- a/eladmin-system/src/main/resources/config/application.yml
+++ b/eladmin-system/src/main/resources/config/application.yml
@@ -65,3 +65,14 @@ user-cache:
   min-evictable-interval: 1800000
   # 最小存活时间 (ms)
   min-idle-time: 3600000
+
+mybatis-plus:
+  check-config-location: true
+  configuration:
+    map-underscore-to-camel-case: true
+  global-config:
+    db-config:
+      id-type: auto
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+      mapper-locations: classpath:mapper/*.xml
